--- a/zszhApp_v2/src/zszhApp_v1.mxml
+++ b/zszhApp_v2/src/zszhApp_v1.mxml
@@ -14,7 +14,7 @@
 		global {
 			modalTransparencyBlur: 2;/* 模糊度*/
 			modalTransparency: 0.6; /* 透明度*/
-			modalTransparencyDuration: 1000;/* 过渡时间*/
+			modalTransparencyDuration: 100;/* 过渡时间*/
 			modalTransparencyColor: black;
 		}
 		
@@ -57,7 +57,9 @@
 			
 			import zszh_WorkSpace3D.Room_3D;
 			
-			import zszh_welcome.Welcome_PopupWindow;
+			import zszh_welcome.PopWin_MyDoc;
+			import zszh_welcome.PopWin_Save;
+			import zszh_welcome.PopWin_Welcome;
 			
 	
 			
@@ -73,9 +75,12 @@
 			
 			private var _menu2:Menu2_File=new Menu2_File;
 			private var _menu5:Menu5_Help=new Menu5_Help;
+			public var _currentMenu:String=null;
 			
 			protected function button1_mouseMoveHandler(event:MouseEvent):void
 			{
+				_currentMenu=event.target.id;
+				
 				if(event.target.id=="MainMenu01")
 				{
 					
@@ -88,7 +93,7 @@
 					var pt:Point = new Point(0,0);  
 					pt = event.target.localToGlobal(pt);  
 					
-					var x1:int=pt.x+event.target.width/2 -_menu5.width/2;
+					var x1:int=pt.x+event.target.width/2 -_menu2.width/2;
 					var y1:int=pt.y+event.target.height-2;
 					_menu2.move(x1,y1);
 				}
@@ -117,33 +122,35 @@
 			
 			protected function button1_mouseOutHandler(event:MouseEvent):void
 			{
-				if(event.target.id=="MainMenu01")
-				{
-					
-				}
-				else if(event.target.id=="MainMenu02")
-				{
-					if(!_menu2._bMouseOver)
-						PopUpManager.removePopUp(_menu2);
-				}
-				else if(event.target.id=="MainMenu03")
-				{
-					
-				}
-				else if(event.target.id=="MainMenu04")
-				{
-					
-				}
-				else if(event.target.id=="MainMenu05")
-				{
-					if(!_menu5._bMouseOver)
-						PopUpManager.removePopUp(_menu5);
-				}
-				
+				_currentMenu=null;				
 			}
 		
 			//-------------主菜单--end-------------------
 			
+			//PopWindows 
+			public function ShowPopWindow(window:String):void
+			{
+				if(window=="PopWin_MyDoc")
+				{
+					var mydocWindow:PopWin_MyDoc=new PopWin_MyDoc();
+					PopUpManager.addPopUp(mydocWindow,this,true);
+					
+					var x1:int=(this.width-mydocWindow.width)/2;
+					var y1:int=(this.height-mydocWindow.height)/2;
+					mydocWindow.move(x1,y1);
+					
+				}
+				else if(window=="PopWin_Save")
+				{
+					var saveWindow:PopWin_Save=new PopWin_Save();
+					PopUpManager.addPopUp(saveWindow,this,true);
+					
+					var x1:int=(this.width-saveWindow.width)/2;
+					var y1:int=(this.height-saveWindow.height)/2;
+					saveWindow.move(x1,y1);
+					
+				}
+			}
 			
 			[Embed(source="embeds/Products/icon_AccHeader1d.png")]
 			private var StarIcon:Class
@@ -154,10 +161,10 @@
 			}
 			
 			//初始化完毕后 welcome 界面
-			var welcomeWindow:Welcome_PopupWindow;
+			var welcomeWindow:PopWin_Welcome;
 			protected function application1_initializeHandler(event:FlexEvent):void
 			{		
-				welcomeWindow=new Welcome_PopupWindow();
+				welcomeWindow=new PopWin_Welcome();
 				PopUpManager.addPopUp(welcomeWindow,this,true);
 				
 				var x1:int=(this.width-welcomeWindow.width)/2;
@@ -192,10 +199,10 @@
 		<s:Image id="Logo" source="@Embed('embeds/MainMenu/logo.png')"/>
 		<s:SkinnableContainer id="MainMenu" verticalCenter="0" right="100" backgroundAlpha="0">
 		<s:Button buttonMode="true" id="MainMenu01" label="首页" x="0"   width="86" height="30" rollOver="button1_mouseMoveHandler(event)" rollOut="button1_mouseOutHandler(event)"  skinClass="zszh_MainMenu.Skin_MainMenuBt"  />
-		<s:Button buttonMode="true" id="MainMenu02" label="文件" x="100" width="86" height="30" rollOver="button1_mouseMoveHandler(event)"  skinClass="zszh_MainMenu.Skin_MainMenuBt"/>		
-		<s:Button buttonMode="true" id="MainMenu03" label="输出" x="200" width="86" height="30" rollOver="button1_mouseMoveHandler(event)"  skinClass="zszh_MainMenu.Skin_MainMenuBt"/>		
-		<s:Button buttonMode="true" id="MainMenu04" label="清单" x="300" width="86" height="30" rollOver="button1_mouseMoveHandler(event)"  skinClass="zszh_MainMenu.Skin_MainMenuBt"/>		
-		<s:Button buttonMode="true" id="MainMenu05" label="帮助" x="400" width="86" height="30" rollOver="button1_mouseMoveHandler(event)"  skinClass="zszh_MainMenu.Skin_MainMenuBt"/>
+		<s:Button buttonMode="true" id="MainMenu02" label="文件" x="100" width="86" height="30" rollOver="button1_mouseMoveHandler(event)" rollOut="button1_mouseOutHandler(event)"  skinClass="zszh_MainMenu.Skin_MainMenuBt"/>		
+		<s:Button buttonMode="true" id="MainMenu03" label="输出" x="200" width="86" height="30" rollOver="button1_mouseMoveHandler(event)" rollOut="button1_mouseOutHandler(event)"  skinClass="zszh_MainMenu.Skin_MainMenuBt"/>		
+		<s:Button buttonMode="true" id="MainMenu04" label="清单" x="300" width="86" height="30" rollOver="button1_mouseMoveHandler(event)" rollOut="button1_mouseOutHandler(event)"   skinClass="zszh_MainMenu.Skin_MainMenuBt"/>		
+		<s:Button buttonMode="true" id="MainMenu05" label="帮助" x="400" width="86" height="30" rollOver="button1_mouseMoveHandler(event)" rollOut="button1_mouseOutHandler(event)"   skinClass="zszh_MainMenu.Skin_MainMenuBt"/>
 		</s:SkinnableContainer>
 	</s:SkinnableContainer>
 	
@@ -226,7 +233,6 @@
 		
 		<!--工作区/-->
 		<s:SkinnableContainer id="WorkSpaceContainer"   depth="7" x="0" width="100%" height="100%" backgroundColor="#000000"  backgroundAlpha="0">
-		
 			<ns:WorkSpace3D id="WorkSpace3D" width="100%" height="100%" visible="false"/>
 			
 			<ns2:WS2D_MainContainer  id="WorkSpace2D" backgroundAlpha="0"  backgroundColor="0x2f3243" width="100%" height="100%" visible="true"/>
