--- a/zszhApp_v2/src/zszh_Products_new/ProductsList.mxml
+++ b/zszhApp_v2/src/zszh_Products_new/ProductsList.mxml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:NavigatorContent xmlns:fx="http://ns.adobe.com/mxml/2009" 
 					xmlns:s="library://ns.adobe.com/flex/spark" 
-					xmlns:mx="library://ns.adobe.com/flex/mx" width="313" height="700">
+					xmlns:mx="library://ns.adobe.com/flex/mx" 
+					xmlns:mysqlCon="services.mysqlcon.*" 
+					xmlns:mysqlJiancai="services.zszhjiancaiservice.*" width="313" height="700">
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 		<s:ArrayCollection id="ComboxData">
@@ -18,43 +20,47 @@
 			<fx:Object labelText="L型房间" ImgThumbnail="{imageRoomL}"  className="Room_2D" classArgument="2" resourcePath=""/>
 			
 			
-			<fx:Object labelText="房型"   ImgThumbnail="zszh_res/basic/wall/wall_h_divider.png" className="Room_2D" classArgument="3" resourcePath=""/>
+			<fx:Object labelText="房型"   ImgThumbnail="{imageRoomHeng}" className="Room_2D" classArgument="3" resourcePath=""/>
 			
 			<fx:Object labelText="横墙"   ImgThumbnail="{imageRoomHeng}" className="Wall_2D" classArgument="1" resourcePath=""/>
 			<fx:Object labelText="竖墙"   ImgThumbnail="{imageRoomShu}" className="Wall_2D" classArgument="2" resourcePath=""/>
 			
-			<fx:Object labelText="床00001" ImgThumbnail="zszh_res/models/beds/bed00001/preview.png" className="model" resourcePath="zszh_res/models/beds/bed00001/" objectName="bed00001"/>
-			<fx:Object labelText="浴缸00001" ImgThumbnail="zszh_res/models/yugangs/yugang00001/preview.png" className="model" resourcePath="zszh_res/models/yugangs/yugang00001/" objectName="yugang00001"/>
-			<fx:Object labelText="椅子" ImgThumbnail="zszh_res/models/yi_zi_di/preview.png" className="model" resourcePath="zszh_res/models/yi_zi_di/" objectName="yi_zi_di"/>
 			
-			<fx:Object labelText="灶台" ImgThumbnail="zszh_res/models/zao_tai_di/preview.png" className="model" resourcePath="zszh_res/models/zao_tai_di/" objectName="zao_tai_di"/>
 			
-			<fx:Object labelText="沙发1" ImgThumbnail="zszh_res/models/sha_fa_01_di/preview.png" className="model" resourcePath="zszh_res/models/sha_fa_01_di/" objectName="sha_fa_01_di"/>
+			<fx:Object labelText="床00001" ImgThumbnail="preview.png" className="model" resourcePath="zszh_res/models/beds/bed00001/" objectName="bed00001"/>
+			<fx:Object labelText="浴缸00001" ImgThumbnail="preview.png" className="model" resourcePath="zszh_res/models/yugangs/yugang00001/" objectName="yugang00001"/>
+			<fx:Object labelText="椅子" ImgThumbnail="preview.png" className="model" resourcePath="zszh_res/models/yi_zi_di/" objectName="yi_zi_di"/>
 			
-			<fx:Object labelText="沙发2" ImgThumbnail="zszh_res/models/sha_fa_02_di/preview.png" className="model" resourcePath="zszh_res/models/sha_fa_02_di/" objectName="sha_fa_02_di"/>
+			<fx:Object labelText="灶台" ImgThumbnail="preview.png" className="model" resourcePath="zszh_res/models/zao_tai_di/" objectName="zao_tai_di"/>
 			
-			<fx:Object labelText="沙发3" ImgThumbnail="zszh_res/models/sha_fa_03_di/preview.png" className="model" resourcePath="zszh_res/models/sha_fa_03_di/" objectName="sha_fa_03_di"/>
+			<fx:Object labelText="沙发1" ImgThumbnail="preview.png" className="model" resourcePath="zszh_res/models/sha_fa_01_di/" objectName="sha_fa_01_di"/>
+			
+			<fx:Object labelText="沙发2" ImgThumbnail="preview.png" className="model" resourcePath="zszh_res/models/sha_fa_02_di/" objectName="sha_fa_02_di"/>
+			
+			<fx:Object labelText="沙发3" ImgThumbnail="preview.png" className="model" resourcePath="zszh_res/models/sha_fa_03_di/" objectName="sha_fa_03_di"/>
 		</s:ArrayCollection>
 		
 		
 		<s:ArrayCollection id="product12">
 			
-			<fx:Object labelText="灶台" ImgThumbnail="zszh_res/models/doors/door00001/preview.png" className="door" resourcePath="zszh_res/models/doors/door00001/" objectName="door00001"/>
+			<fx:Object labelText="灶台" ImgThumbnail="preview.png" className="door" resourcePath="zszh_res/models/doors/door00001/" objectName="door00001"/>
 			
-			<fx:Object labelText="沙发1" ImgThumbnail="zszh_res/models/doors/door00002/preview.png" className="door" resourcePath="zszh_res/models/doors/door00002/" objectName="door00002"/>
+			<fx:Object labelText="沙发1" ImgThumbnail="preview.png" className="door" resourcePath="zszh_res/models/doors/door00002/" objectName="door00002"/>
 			
 			
 		</s:ArrayCollection>
 		
 		<s:ArrayCollection id="product13">
 			
-			<fx:Object labelText="灶台" ImgThumbnail="zszh_res/models/windows/window00001/preview.png" className="window" resourcePath="zszh_res/models/windows/window00001/" objectName="window00001"/>
+			<fx:Object labelText="灶台" ImgThumbnail="preview.png" className="window" resourcePath="zszh_res/models/windows/window00001/" objectName="window00001"/>
 			
-			<fx:Object labelText="沙发1" ImgThumbnail="zszh_res/models/windows/window00002/preview.png" className="window" resourcePath="zszh_res/models/windows/window00002/" objectName="window00002"/>
+			<fx:Object labelText="沙发1" ImgThumbnail="preview.png" className="window" resourcePath="zszh_res/models/windows/window00002/" objectName="window00002"/>
 			
 			
 		</s:ArrayCollection>
 		
+		<s:CallResponder id="testCallresponder"/>
+		<mysqlJiancai:ZszhjiancaiService1 id="getallTest" result="getallTest_resultHandler(event)" fault="Alert.show(event.fault.faultString+ '\n' + event.fault.faultDetail)" showBusyCursor="true"/>
 	</fx:Declarations>
 	<fx:Style>
 		@namespace s "library://ns.adobe.com/flex/spark";
@@ -67,8 +73,12 @@
 	
 	<fx:Script>
 		<![CDATA[
-
+			import mx.controls.Alert;
 			import mx.events.FlexEvent;
+			import mx.rpc.CallResponder;
+			import mx.rpc.events.ResultEvent;
+			
+			import services.mysqlcon.Mysqlcon;
 			
 			[Embed(source="../embeds/rooms/room_big.png")]
 			public var imageRoomBig:Class;
@@ -115,6 +125,8 @@
 			protected function myList_initializeHandler(event:FlexEvent):void
 			{
 				productsCol=product11;
+				testCallresponder.token=getallTest.getAllZszh_jiancai();
+				
 			}
 			
 			public function SetDataProvider(index:int):void
@@ -125,10 +137,25 @@
 					productsCol=product12;
 				else if(index==3)
 					productsCol=product13;
+				else if (index==41)
+				{
+					testCallresponder.token=getallTest.getZszh_jiancaiByClassName("diban");
+				}
+				else if (index==44)
+				{
+					testCallresponder.token=getallTest.getZszh_jiancaiByClassName("rujiaoqi");
+				} 
+			}
+			
+			protected function getallTest_resultHandler(event:ResultEvent):void
+			{
+				// TODO Auto-generated method stub
+				productsCol=testCallresponder.lastResult;
 			}
 			
 		]]>
 	</fx:Script>
+	
 	
 	<s:SkinnableContainer id="Search" top="1" backgroundColor="#1abc9c" width="100%" height="75" >
 		<s:Label text="Search" x="10" verticalCenter="5" styleName="customFontStyles" />
@@ -144,7 +171,7 @@
 			<s:ComboBox x="106" width="99" top="5" height="25" styleName="customTextInput" dataProvider="{ComboxData}" selectedIndex="0" />
 			<s:ComboBox x="207" width="99" top="5" height="25" styleName="customTextInput" dataProvider="{ComboxData}" selectedIndex="0"/>
 
-			<s:List id="myList" top="40" contentBackgroundColor="#10181e" borderVisible="false" horizontalCenter="0" 
+			<s:List id="myList"  dragEnabled="true" top="40"  contentBackgroundColor="#10181e" borderVisible="false" horizontalCenter="0" 
 				itemRenderer="zszh_Products_new.ItemRender_Products" initialize="myList_initializeHandler(event)" dataProvider="{productsCol}"
 				height="100%" verticalScrollPolicy="off">
 				<s:layout>
