--- a/zszhApp_v2/src/zszh_Products_new/ProductsList.mxml
+++ b/zszhApp_v2/src/zszh_Products_new/ProductsList.mxml
@@ -2,8 +2,7 @@
 <s:NavigatorContent xmlns:fx="http://ns.adobe.com/mxml/2009" 
 					xmlns:s="library://ns.adobe.com/flex/spark" 
 					xmlns:mx="library://ns.adobe.com/flex/mx" 
-					xmlns:mysqlCon="services.mysqlcon.*" 
-					xmlns:mysqlJiancai="services.zszhjiancaiservice.*" width="313" height="700" xmlns:ns="zszh_Products_new.*">
+				    width="313" height="700" xmlns:ns="zszh_Products_new.*" xmlns:zszhmodelsservice="services.zszhmodelsservice.*" xmlns:zszhjiancaiservice="services.zszhjiancaiservice.*">
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 		<s:ArrayCollection id="ComboxData">
@@ -15,54 +14,74 @@
 		
 		<s:ArrayCollection id="product11">
 			
-			<fx:Object labelText="大房间" 	 ImgThumbnail="{imageRoomBig}"  className="Room_2D" classArgument="1" resourcePath=""/>
-			<fx:Object labelText="小房间"  ImgThumbnail="{imageRoomSmall}" className="Room_2D" classArgument="4" resourcePath=""/>
-			<fx:Object labelText="L型房间" ImgThumbnail="{imageRoomL}"  className="Room_2D" classArgument="2" resourcePath=""/>
+			<fx:Object labelText="大房间" 	 imgThumbnail="{imageRoomBig}"  className="Room_2D" classArgument="1" resourcePath=""/>
+			<fx:Object labelText="小房间"  imgThumbnail="{imageRoomSmall}" className="Room_2D" classArgument="4" resourcePath=""/>
+			<fx:Object labelText="L型房间" imgThumbnail="{imageRoomL}"  className="Room_2D" classArgument="2" resourcePath=""/>
+			<fx:Object labelText="横墙"   imgThumbnail="{imageRoomHeng}" className="Wall_2D" classArgument="1" resourcePath=""/>
+			<fx:Object labelText="竖墙"   imgThumbnail="{imageRoomShu}" className="Wall_2D" classArgument="2" resourcePath=""/>
+			
+			<!--fx:Object labelText="房型"   imgThumbnail="{imageRoomHeng}" className="Room_2D" classArgument="3" resourcePath=""/-->
 			
 			
-			<fx:Object labelText="房型"   ImgThumbnail="{imageRoomHeng}" className="Room_2D" classArgument="3" resourcePath=""/>
-			
-			<fx:Object labelText="横墙"   ImgThumbnail="{imageRoomHeng}" className="Wall_2D" classArgument="1" resourcePath=""/>
-			<fx:Object labelText="竖墙"   ImgThumbnail="{imageRoomShu}" className="Wall_2D" classArgument="2" resourcePath=""/>
 			
 			
 			
-			<fx:Object labelText="床00001" ImgThumbnail="preview.png" className="model" resourcePath="zszh_res/models/beds/bed00001/" objectName="bed00001"/>
-			<fx:Object labelText="浴缸00001" ImgThumbnail="preview.png" className="model" resourcePath="zszh_res/models/yugangs/yugang00001/" objectName="yugang00001"/>
-			<fx:Object labelText="椅子" ImgThumbnail="preview.png" className="model" resourcePath="zszh_res/models/yi_zi_di/" objectName="yi_zi_di"/>
+			<!--fx:Object labelText="床00001" imgThumbnail="preview.png" className="model" resourcePath="zszh_res/models/beds/bed00001/" objectName="bed00001"/>
+			<fx:Object labelText="浴缸00001" imgThumbnail="preview.png" className="model" resourcePath="zszh_res/models/yugangs/yugang00001/" objectName="yugang00001"/>
+			<fx:Object labelText="椅子" imgThumbnail="preview.png" className="model" resourcePath="zszh_res/models/yi_zi_di/" objectName="yi_zi_di"/>
 			
-			<fx:Object labelText="灶台" ImgThumbnail="preview.png" className="model" resourcePath="zszh_res/models/zao_tai_di/" objectName="zao_tai_di"/>
+			<fx:Object labelText="灶台" imgThumbnail="preview.png" className="model" resourcePath="zszh_res/models/zao_tai_di/" objectName="zao_tai_di"/>
 			
-			<fx:Object labelText="沙发1" ImgThumbnail="preview.png" className="model" resourcePath="zszh_res/models/sha_fa_01_di/" objectName="sha_fa_01_di"/>
+			<fx:Object labelText="沙发1" imgThumbnail="preview.png" className="model" resourcePath="zszh_res/models/sha_fa_01_di/" objectName="sha_fa_01_di"/>
 			
-			<fx:Object labelText="沙发2" ImgThumbnail="preview.png" className="model" resourcePath="zszh_res/models/sha_fa_02_di/" objectName="sha_fa_02_di"/>
+			<fx:Object labelText="沙发2" imgThumbnail="preview.png" className="model" resourcePath="zszh_res/models/sha_fa_02_di/" objectName="sha_fa_02_di"/>
 			
-			<fx:Object labelText="沙发3" ImgThumbnail="preview.png" className="model" resourcePath="zszh_res/models/sha_fa_03_di/" objectName="sha_fa_03_di"/>
+			<fx:Object labelText="沙发3" imgThumbnail="preview.png" className="model" resourcePath="zszh_res/models/sha_fa_03_di/" objectName="sha_fa_03_di"/-->
 		</s:ArrayCollection>
 		
 		
 		<s:ArrayCollection id="product12">
 			
-			<fx:Object labelText="灶台" ImgThumbnail="preview.png" className="door" resourcePath="zszh_res/models/doors/door00001/" objectName="door00001"/>
+			<fx:Object labelText="灶台" imgThumbnail="preview.png" className="door" resourcePath="zszh_res/models/doors/door00001/" objectName="door00001"/>
 			
-			<fx:Object labelText="沙发1" ImgThumbnail="preview.png" className="door" resourcePath="zszh_res/models/doors/door00002/" objectName="door00002"/>
+			<fx:Object labelText="沙发1" imgThumbnail="preview.png" className="door" resourcePath="zszh_res/models/doors/door00002/" objectName="door00002"/>
 			
 			
 		</s:ArrayCollection>
 		
 		<s:ArrayCollection id="product13">
 			
-			<fx:Object labelText="灶台" ImgThumbnail="preview.png" className="window" resourcePath="zszh_res/models/windows/window00001/" objectName="window00001"/>
+			<fx:Object labelText="灶台" imgThumbnail="preview.png" className="window" resourcePath="zszh_res/models/windows/window00001/" objectName="window00001"/>
 			
-			<fx:Object labelText="沙发1" ImgThumbnail="preview.png" className="window" resourcePath="zszh_res/models/windows/window00002/" objectName="window00002"/>
+			<fx:Object labelText="沙发1" imgThumbnail="preview.png" className="window" resourcePath="zszh_res/models/windows/window00002/" objectName="window00002"/>
 			
+			
+		</s:ArrayCollection>
+		
+		<s:ArrayCollection id="product31">
+			
+			<fx:Object labelText="床00001" imgThumbnail="preview.png" className="model" resourcePath="zszh_res/models/beds/bed00001/" objectName="bed00001"/>
+			<fx:Object labelText="浴缸00001" imgThumbnail="preview.png" className="model" resourcePath="zszh_res/models/yugangs/yugang00001/" objectName="yugang00001"/>
+			<fx:Object labelText="椅子" imgThumbnail="preview.png" className="model" resourcePath="zszh_res/models/yi_zi_di/" objectName="yi_zi_di"/>
+			
+			<fx:Object labelText="灶台" imgThumbnail="preview.png" className="model" resourcePath="zszh_res/models/zao_tai_di/" objectName="zao_tai_di"/>
+			
+			<fx:Object labelText="沙发1" imgThumbnail="preview.png" className="model" resourcePath="zszh_res/models/sha_fa_01_di/" objectName="sha_fa_01_di"/>
+			
+			<fx:Object labelText="沙发2" imgThumbnail="preview.png" className="model" resourcePath="zszh_res/models/sha_fa_02_di/" objectName="sha_fa_02_di"/>
+			
+			<fx:Object labelText="沙发3" imgThumbnail="preview.png" className="model" resourcePath="zszh_res/models/sha_fa_03_di/" objectName="sha_fa_03_di"/>
 			
 		</s:ArrayCollection>
 		
 		<s:CallResponder id="testCallresponder"/>
 		<s:CallResponder id="testCallresponderCount"/>
-		<mysqlJiancai:ZszhjiancaiService1 id="getallTest2" result="getallTest2_resultHandler(event)" fault="Alert.show(event.fault.faultString+ '\n' + event.fault.faultDetail)" showBusyCursor="true"/>
-		<mysqlJiancai:ZszhjiancaiService1 id="getallTest" result="getallTest_resultHandler(event)" fault="Alert.show(event.fault.faultString+ '\n' + event.fault.faultDetail)" showBusyCursor="true"/>
+		<zszhjiancaiservice:ZszhjiancaiService id="getallTest2" result="getallTest2_resultHandler(event)" fault="Alert.show(event.fault.faultString+ '\n' + event.fault.faultDetail)" showBusyCursor="true"/>
+		<zszhjiancaiservice:ZszhjiancaiService  id="getallTest" result="getallTest_resultHandler(event)" fault="Alert.show(event.fault.faultString+ '\n' + event.fault.faultDetail)" showBusyCursor="true"/>
+		
+		
+		<s:CallResponder id="ModelCallResponder"/>
+		<zszhmodelsservice:ZszhmodelsService id="ModelService" result="ModelService_resultHandler(event)" fault="Alert.show(event.fault.faultString+ '\n' + event.fault.faultDetail)" showBusyCursor="true"/>
 	</fx:Declarations>
 	<fx:Style>
 		@namespace s "library://ns.adobe.com/flex/spark";
@@ -71,6 +90,21 @@
 			backgroundColor: #ff0000;
 			skin: ClassReference("zszh_Products_old.Skin_NavigatorContent");
 		}
+		
+		.customCombox{
+			font-size:12px;
+			font-style: normal;
+			font-weight: normal;
+			font-family:"微软雅黑";
+			text-align:center;
+			
+			color:#00ff00;  
+			corner-radius:17;  
+			selection-color:#ffffff;  
+			text-selected-color:#000000;  
+			roll-over-color:#3370ce;  
+		}
+		
 	</fx:Style>
 	
 	<fx:Script>
@@ -126,18 +160,19 @@
 
 			protected function myList_initializeHandler(event:FlexEvent):void
 			{
-				productsCol=product11;
-				testCallresponder.token=getallTest.getAllZszh_jiancai();
-				
+				productsCol=product11;				
 			}
 			
 			public function SetDataProvider(index:int):void
 			{
-				if(index==1)
+				if(index==11)
+				{
 					productsCol=product11;
-				else if(index==2)
+					myList.setStyle("verticalScrollPolicy","off");
+				}
+				else if(index==12)
 					productsCol=product12;
-				else if(index==3)
+				else if(index==13)
 					productsCol=product13;
 				else if (index==41)
 				{
@@ -149,6 +184,27 @@
 				{
 					testCallresponder.token=getallTest.getZszh_jiancaiByClassName("rujiaoqi",currentPage,10);
 					//getallTest.count()
+				} 
+				
+				else if (index==31)
+				{
+					ModelCallResponder.token=ModelService.getZszh_modelsByCategory("bed",0,10);
+					//productsCol=product31;
+				} 
+				else if (index==32)
+				{
+					ModelCallResponder.token=ModelService.getZszh_modelsByCategory("chest",0,10);
+					//productsCol=product31;
+				} 
+				else if (index==33)
+				{
+					ModelCallResponder.token=ModelService.getZszh_modelsByCategory("sofa",0,10);
+					//productsCol=product31;
+				} 
+				else if (index==34)
+				{
+					ModelCallResponder.token=ModelService.getZszh_modelsByCategory("table",0,10);
+					//productsCol=product31;
 				} 
 			}
 			
@@ -173,6 +229,12 @@
 					testCallresponder.token=getallTest.getZszh_jiancaiByClassName("diban",currentPage,10);
 				}
 			}
+			
+			protected function ModelService_resultHandler(event:ResultEvent):void
+			{
+				productsCol=ModelCallResponder.lastResult;
+			}
+			
 		]]>
 	</fx:Script>
 	
@@ -180,18 +242,18 @@
 	<s:SkinnableContainer id="Search" top="1" backgroundColor="#1abc9c" width="100%" height="75" >
 		<s:Label text="Search" x="10" verticalCenter="5" styleName="customFontStyles" />
 		<!--mx:TextInput x="85" width="160" height="32" verticalCenter="5" styleName="customTextInput" /-->
-		<s:ComboBox x="75" width="170" verticalCenter="5" styleName="customTextInput" />
+		<s:ComboBox x="75" width="170" verticalCenter="5" styleName="customCombox" />
 		<s:Image  buttonMode="true" x="262" source="@Embed('embeds/MainMenu/icon_search.png')" verticalCenter="5"/>
 	</s:SkinnableContainer>
 
 	<s:SkinnableContainer id="ProductsShow" backgroundColor="#00cd99" y="75" width="100%" height="100%" > 
 		
 		<s:SkinnableContainer backgroundColor="#10181e" top="1" left="1" right="1" bottom="1">
-			<s:ComboBox x="5" width="99" top="5" height="25" styleName="customTextInput" dataProvider="{ComboxData}" selectedIndex="0" />
-			<s:ComboBox x="106" width="99" top="5" height="25" styleName="customTextInput" dataProvider="{ComboxData}" selectedIndex="0" />
-			<s:ComboBox x="207" width="99" top="5" height="25" styleName="customTextInput" dataProvider="{ComboxData}" selectedIndex="0"/>
+			<s:ComboBox x="5" width="99" top="5" height="25"  styleName="customCombox" dataProvider="{ComboxData}" selectedIndex="0" />
+			<s:ComboBox x="106" width="99" top="5" height="25" styleName="customCombox" dataProvider="{ComboxData}" selectedIndex="0" />
+			<s:ComboBox x="207" width="99" top="5" height="25" styleName="customCombox" dataProvider="{ComboxData}" selectedIndex="0"/>
 
-			<s:List id="myList"  dragEnabled="true" top="40"  contentBackgroundColor="#10181e" borderVisible="false" horizontalCenter="0" 
+			<s:List id="myList" dragEnabled="false"  top="40"  contentBackgroundColor="#10181e" borderVisible="false" horizontalCenter="0" 
 				itemRenderer="zszh_Products_new.ItemRender_Products" initialize="myList_initializeHandler(event)" dataProvider="{productsCol}"
 				height="100%" verticalScrollPolicy="on">
 				<s:layout>
