--- a/zszhApp_v2/src/zszh_Products_new/ProductsMainMenu.mxml
+++ b/zszhApp_v2/src/zszh_Products_new/ProductsMainMenu.mxml
@@ -152,7 +152,24 @@
 			protected function Button_mouseDownHandler(event:MouseEvent):void
 			{
 				var bname:String=event.target.name;
-				if(_buttonOpen==bname)
+				ButtonOneMouseDown(bname);
+			}
+			
+			//二级按钮
+			
+			protected function ButtonTwo_mouseDownHandler(event:MouseEvent):void
+			{
+				//二级按钮
+				var bname:String=event.target.name;
+				
+				ButtonTwoMouseDown(bname);
+			
+			}
+			
+			
+			public function ButtonOneMouseDown(bname:String,canClose:Boolean=true):void
+			{
+				if(_buttonOpen==bname&&canClose)
 				{
 					for(var i:int =1;i<8;i++)
 						this["Button0effect"+i].play();
@@ -166,7 +183,7 @@
 				{
 					for(i=1;i<8;i++)
 						this[bname+"effect"+i].play();
-				
+					
 					if(bname=="Button7")
 						Button7resize.play();
 					else Button7resize_.play();
@@ -180,37 +197,52 @@
 					_buttonTwoBorder=null;
 				}
 				
-				Products.visible=false;
+				if(canClose)
+					Products.visible=false;
 			}
-			
-			//二级按钮
-			
-			protected function ButtonTwo_mouseDownHandler(event:MouseEvent):void
+			public function ButtonTwoMouseDown(bname:String):void
 			{
-				//二级按钮
-				var bname:String=event.target.name;
-
 				if(bname=="Button11")
 				{
 					Products.visible=true;
-					Products.SetDataProvider(1);
+					Products.SetDataProvider(11);
 				}
 				else if(bname=="Button12")
 				{
 					Products.visible=true;
-					Products.SetDataProvider(2);
+					Products.SetDataProvider(12);
 				}
 				else if(bname=="Button13")
 				{
 					Products.visible=true;
-					Products.SetDataProvider(3);
+					Products.SetDataProvider(13);
+				}
+				else if(bname=="Button31")
+				{
+					Products.visible=true;
+					Products.SetDataProvider(31);
+				}
+				else if(bname=="Button32")
+				{
+					Products.visible=true;
+					Products.SetDataProvider(32);
+				}
+				else if(bname=="Button33")
+				{
+					Products.visible=true;
+					Products.SetDataProvider(33);
+				}
+				else if(bname=="Button34")
+				{
+					Products.visible=true;
+					Products.SetDataProvider(34);
 				}
 				else if(bname=="Button41")
 				{
 					Products.visible=true;
 					Products.SetDataProvider(41);
 				}
-				
+					
 				else if(bname=="Button44")
 				{
 					Products.visible=true;
@@ -228,21 +260,21 @@
 				sp.graphics.clear();
 				sp.graphics.lineStyle(1,0x00cd99);
 				sp.graphics.moveTo(0,0);
-				sp.graphics.lineTo(event.target.width,0);
+				sp.graphics.lineTo(this[bname].width,0);
 				sp.graphics.moveTo(0,0);
-				sp.graphics.lineTo(0,event.target.height);
-				sp.graphics.lineTo(event.target.width,event.target.height);
-
+				sp.graphics.lineTo(0,this[bname].height);
+				sp.graphics.lineTo(this[bname].width,this[bname].height);
+				
 				sp.graphics.lineStyle(1,0x171e22);
-				sp.graphics.lineTo(event.target.width,0);
+				sp.graphics.lineTo(this[bname].width,0);
 				
 				_buttonTwoBorder=new UIComponent;
 				_buttonTwoBorder.addChild(sp);
-				 
+				
 				var buttonstr:String=bname.substr(0,7)+"s";
 				trace(buttonstr);
-				_buttonTwoBorder.x=this[buttonstr].x+event.target.x;
-				_buttonTwoBorder.y=this[buttonstr].y+event.target.y;
+				_buttonTwoBorder.x=this[buttonstr].x+this[bname].x;
+				_buttonTwoBorder.y=this[buttonstr].y+this[bname].y;
 				
 				Buttons.addElement(_buttonTwoBorder);
 			}
@@ -290,14 +322,14 @@
 			<s:layout>
 				<s:VerticalLayout gap="0"/>
 			</s:layout>
-		<s:Button  id="Button31" name="Button31" label="床"  width="63" height="25%" skinClass="zszh_Products_new.Skin_ProductsBt"  buttonMode="true" />
-		<s:Button  id="Button32" name="Button32" label="柜"  width="63" height="25%" skinClass="zszh_Products_new.Skin_ProductsBt"  buttonMode="true" />
-		<s:Button  id="Button33" name="Button33" label="沙发" width="63" height="25%" skinClass="zszh_Products_new.Skin_ProductsBt"  buttonMode="true" />
-		<s:Button  id="Button34" name="Button34" label="桌" width="63" height="25%" skinClass="zszh_Products_new.Skin_ProductsBt"  buttonMode="true" />
-		<s:Button  id="Button35" name="Button35" label="椅" width="63" height="25%" skinClass="zszh_Products_new.Skin_ProductsBt"  buttonMode="true" />
-		<s:Button  id="Button36" name="Button36" label="箱" width="63" height="25%" skinClass="zszh_Products_new.Skin_ProductsBt"  buttonMode="true" />
-		<s:Button  id="Button37" name="Button37" label="几类" width="63" height="25%" skinClass="zszh_Products_new.Skin_ProductsBt"  buttonMode="true" />
-		<s:Button  id="Button38" name="Button38" label="镜子" width="63" height="25%" skinClass="zszh_Products_new.Skin_ProductsBt"  buttonMode="true" />
+		<s:Button  id="Button31" name="Button31" label="床"  width="63" height="25%" skinClass="zszh_Products_new.Skin_ProductsBt" mouseDown="ButtonTwo_mouseDownHandler(event)" buttonMode="true" />
+		<s:Button  id="Button32" name="Button32" label="柜"  width="63" height="25%" skinClass="zszh_Products_new.Skin_ProductsBt" mouseDown="ButtonTwo_mouseDownHandler(event)" buttonMode="true" />
+		<s:Button  id="Button33" name="Button33" label="沙发" width="63" height="25%" skinClass="zszh_Products_new.Skin_ProductsBt" mouseDown="ButtonTwo_mouseDownHandler(event)" buttonMode="true" />
+		<s:Button  id="Button34" name="Button34" label="桌" width="63" height="25%" skinClass="zszh_Products_new.Skin_ProductsBt"  mouseDown="ButtonTwo_mouseDownHandler(event)" buttonMode="true" />
+		<s:Button  id="Button35" name="Button35" label="椅" width="63" height="25%" skinClass="zszh_Products_new.Skin_ProductsBt"  mouseDown="ButtonTwo_mouseDownHandler(event)" buttonMode="true" />
+		<s:Button  id="Button36" name="Button36" label="箱" width="63" height="25%" skinClass="zszh_Products_new.Skin_ProductsBt"  mouseDown="ButtonTwo_mouseDownHandler(event)" buttonMode="true" />
+		<s:Button  id="Button37" name="Button37" label="几类" width="63" height="25%" skinClass="zszh_Products_new.Skin_ProductsBt" mouseDown="ButtonTwo_mouseDownHandler(event)" buttonMode="true" />
+		<s:Button  id="Button38" name="Button38" label="镜子" width="63" height="25%" skinClass="zszh_Products_new.Skin_ProductsBt" mouseDown="ButtonTwo_mouseDownHandler(event)" buttonMode="true" />
 		</s:SkinnableContainer>
 		
 		
