--- a/zszhApp_v2/src/zszh_ToolsBar/ToolsBar.mxml
+++ b/zszhApp_v2/src/zszh_ToolsBar/ToolsBar.mxml
@@ -14,7 +14,7 @@
 		
 		import zszh_WorkSpace2D.Object2D_Model;
 		import zszh_WorkSpace2D.Object2D_Room;
-		import zszh_WorkSpace2D.Wall_2D;
+		import zszh_WorkSpace2D.Object2D_PartitionWall;
 		
 		import zszh_WorkSpace3D.Model_3D;
 		[Embed(source="embeds/ToolsBar/toolbar_1.png")]
@@ -85,7 +85,7 @@
 			
 			for(var i:int=0;i<parentApplication.WorkSpace2D.WorkSpace2D._room2DVec.length;i++)
 			{
-				var room2d:UIComponent=parentApplication.WorkSpace2D.WorkSpace2D._room2DVec[i] as UIComponent;		
+				var room2d:Object2D_Room=parentApplication.WorkSpace2D.WorkSpace2D._room2DVec[i] as Object2D_Room;		
 				var vertex_old:Vector.<Number>= (room2d as Object2D_Room)._vertexVec1;
 				
 				var vertex_old2:Vector.<Number>= (room2d as Object2D_Room)._vertexVec2;
@@ -95,20 +95,20 @@
 				var vertex_new2:Vector.<Number>=new Vector.<Number>;
 				var vertex_new3:Vector.<Number>=new Vector.<Number>;
 				
-				if(room2d.className=="Object2D_Room")
+				if(room2d.className=="Object2D_Room"&&room2d.visible)
 				{
 					for(var j:int=0;j<vertex_old.length;j+=2)
 					{
 						vertex_new.push(room2d.x+vertex_old[j]-3200);
-						vertex_new.push(room2d.y+vertex_old[j+1]-3200);
+						vertex_new.push(-room2d.y+vertex_old[j+1]+3200);
 						
 						vertex_new2.push(room2d.x+vertex_old2[j]-3200);
-						vertex_new2.push(room2d.y+vertex_old2[j+1]-3200);
+						vertex_new2.push(-room2d.y+vertex_old2[j+1]+3200);
 						
 						vertex_new3.push(room2d.x+vertex_old3[j]-3200);
-						vertex_new3.push(room2d.y+vertex_old3[j+1]-3200);
+						vertex_new3.push(-room2d.y+vertex_old3[j+1]+3200);
 					}
-					parentApplication.WorkSpace3D.AddRoom(vertex_new,vertex_new2,vertex_new3,room2d.name);				    
+					parentApplication.WorkSpace3D.AddRoom(vertex_new,vertex_new2,vertex_new3,room2d._floor._floorTex, room2d.name);				    
 				}
 			}
 			//隔墙 
@@ -120,7 +120,7 @@
 				if(wallInside.className=="Wall_2D")
 				{
 					var pos:Array=new Array;
-					var vertex_old:Vector.<Number>= (wallInside as Wall_2D)._vertexVec;
+					var vertex_old:Vector.<Number>= (wallInside as Object2D_PartitionWall)._vertexVec;
 					var vertex_new:Vector.<Number>=new Vector.<Number>;
 					
 					for(var j:int=0;j<vertex_old.length;j+=2)
@@ -151,6 +151,7 @@
 			}
 			
 			parentApplication.WorkSpace3D.visible=true;
+			parentApplication.WorkSpace2D.WorkSpace2D.SetAllNoSelected();
 			parentApplication.WorkSpace2D.visible=false;
 			
 		}
