--- a/zszhApp_v2/src/zszh_WorkSpace2D/WS2D_MainContainer.mxml
+++ b/zszhApp_v2/src/zszh_WorkSpace2D/WS2D_MainContainer.mxml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:SkinnableContainer xmlns:fx="http://ns.adobe.com/mxml/2009" 
 					  xmlns:s="library://ns.adobe.com/flex/spark" 
-					  xmlns:mx="library://ns.adobe.com/flex/mx" width="400" height="300" xmlns:local="*" xmlns:ns="zszh_WorkSpace2D.*">
+					  xmlns:mx="library://ns.adobe.com/flex/mx" width="400" height="300" xmlns:local="*" xmlns:ns="zszh_WorkSpace2D.*"
+					  enterFrame="skinnablecontainer_enterFrameHandler(event)">
 	<fx:Script>
 		<![CDATA[
-			private function ShowScale():void {
-				}
+			
+			protected function skinnablecontainer_enterFrameHandler(event:Event):void
+			{
+				if(scaleBt&&WorkSpace2D&&WorkSpace2D._grid)
+					scaleBt.label=WorkSpace2D._grid.scaleX.toString();
+			}
+			
 		]]>
 	</fx:Script>
 	<fx:Declarations>
@@ -13,5 +19,6 @@
 	</fx:Declarations>
 	
 	<ns:WorkSpace2D id="WorkSpace2D" width="100%" height="100%"/>
-	<s:Button name="scaleButton" x="20" bottom="10" label="标尺" width="80" height="20" click="ShowScale()" />
+	<s:Button id="scaleBt" width="100" height="20" bottom="20"/>
+	
 </s:SkinnableContainer>
