--- a/zszhApp_v2/src/zszh_welcome/PopWin_MyDoc.mxml
+++ b/zszhApp_v2/src/zszh_welcome/PopWin_MyDoc.mxml
@@ -72,7 +72,7 @@
 		
 		<s:NavigatorContent label="我的文档" width="100%" height="100%" backgroundColor="0xffffff" >
 			<s:Button label="Start" skinClass="zszh_welcome.Skin_BtStart" width="215" height="75" horizontalCenter="0" bottom="15" click="StartApp()" />
-			<s:SkinnableContainer backgroundColor="0xf2f0ec" width="100%" height="290" bottom="100" >
+			<s:SkinnableContainer  width="100%" height="290" bottom="100" skinClass="zszh_welcome.Skin_WelcomeCenter" >
 			</s:SkinnableContainer>
 		</s:NavigatorContent>
 		
