--- a/zszhApp_v2/src/zszh_welcome/PopWin_Welcome.mxml
+++ b/zszhApp_v2/src/zszh_welcome/PopWin_Welcome.mxml
@@ -89,7 +89,7 @@
 		<s:NavigatorContent label="模板欣赏" width="100%" height="100%" backgroundColor="0xffffff" >
 			<s:Button label="Start" skinClass="zszh_welcome.Skin_BtStart" width="215" height="75" horizontalCenter="0" bottom="15" click="StartApp()" />
 			
-			<s:SkinnableContainer backgroundColor="0xf2f0ec" width="100%" height="290" bottom="100" >
+			<s:SkinnableContainer width="100%" height="290" bottom="100" skinClass="zszh_welcome.Skin_WelcomeCenter" >
 				<s:Button width="188" height="192"  x="45" icon="{icon_B1}"  skinClass="zszh_welcome.Skin_Bt"/>
 				<s:Button width="188" height="192"  x="300" icon="{icon_B2}" skinClass="zszh_welcome.Skin_Bt"/>
 				<s:Button width="188" height="192"  x="555" icon="{icon_B3}" skinClass="zszh_welcome.Skin_Bt"/>
