--- a/zszhApp_v2/src/zszh_Products_new/ItemRender_Products.mxml
+++ b/zszhApp_v2/src/zszh_Products_new/ItemRender_Products.mxml
@@ -2,7 +2,7 @@
 <s:ItemRenderer xmlns:fx="http://ns.adobe.com/mxml/2009" 
 				xmlns:s="library://ns.adobe.com/flex/spark" 
 				xmlns:mx="library://ns.adobe.com/flex/mx" 
-				autoDrawBackground="true" click="itemrenderer1_clickHandler(event)" mouseDown="itemrenderer1_mouseDownHandler(event)" dataChange="itemrenderer1_dataChangeHandler(event)">
+				autoDrawBackground="true" click="itemrenderer1_clickHandler(event)" mouseMove="itemrenderer1_mouseDownHandler(event)" dataChange="itemrenderer1_dataChangeHandler(event)">
 	<fx:Script>
 		<![CDATA[
 			import mx.core.DragSource;
@@ -68,6 +68,15 @@
 					DragManager.doDrag(dragInitiator, ds,event,dragProxy,0,0);
 				}
 				
+				else if(data.className="window")
+				{
+					//need fixed
+					dragProxy.source=img.source;
+					dragProxy.width=120;
+					dragProxy.height=120;
+					DragManager.doDrag(dragInitiator, ds,event,dragProxy,0,0);
+				}
+				
 				function OnComplete(e:Event):void
 				{
 					dragProxy.source=loader.content;
@@ -77,8 +86,9 @@
 					dragProxy.height=h;
 					var dw:int=-w/2;
 					var dh:int=-h/2;
-					DragManager.doDrag(dragInitiator, ds,event,dragProxy,dw,dh);
-				}		
+					DragManager.doDrag(dragInitiator, ds,event,dragProxy);
+				}	
+				event.stopPropagation();
 			}
 		
 			
